Fixed group tests