@@ -646,30 +646,6 @@
             <scope>compile</scope>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.hectorclient</groupId>-->
-            <!--<artifactId>hector-core</artifactId>-->
-            <!--<version>${hector.version}</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>javax.servlet</groupId>-->
-                    <!--<artifactId>servlet-api</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.hectorclient</groupId>-->
-            <!--<artifactId>hector-object-mapper</artifactId>-->
-            <!--<version>${hector.mapper.version}</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.mortbay.jetty</groupId>-->
-                    <!--<artifactId>servlet-api</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-
-
         <dependency>
             <groupId>org.apache.geronimo.javamail</groupId>
             <artifactId>geronimo-javamail_1.4_mail</artifactId>
@@ -817,31 +793,6 @@
             <artifactId>spring-data-cassandra</artifactId>
             <version>1.3.1.RELEASE</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.cassandra</groupId>-->
-            <!--<artifactId>cassandra-all</artifactId>-->
-            <!--<version>${cassandra.version}</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>javax.servlet</groupId>-->
-                    <!--<artifactId>servlet-api</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.mortbay.jetty</groupId>-->
-                    <!--<artifactId>servlet-api</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.mortbay.jetty</groupId>-->
-                    <!--<artifactId>jetty</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.mortbay.jetty</groupId>-->
-                    <!--<artifactId>jetty-util</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
 
 
         <dependency>
@@ -1008,7 +959,7 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <reportsDirectory>${project.testresult.directory}/surefire-reports</reportsDirectory>
-                    <argLine>-XX:MaxPermSize=128m -Xmx256m ${surefireArgLine}</argLine>
+                    <argLine>${surefireArgLine}</argLine>
                     <!--<skipTests>${skip.unit.tests}</skipTests>-->
                     <!-- Force alphabetical order to have a reproducible build -->
                     <runOrder>alphabetical</runOrder>
